mongo/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: db
spec:
  serviceName: mongodb
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
        selector: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongo:4.4.0
        ports:
          - containerPort: 27017
        resources:
          requests:
            cpu: "10m"
            memory: "300Mi"
          limits:
            cpu: "1000m"
            memory: "300Mi"
        volumeMounts:
          - name: mongodb-configmap
            mountPath: /config
            readOnly: true
          - name: mongodb-data
            mountPath: /data/db
      volumes:
      - name: mongodb-configmap
        configMap:
          name: mongodb-configmap
          items:
          - key: mongo.conf
            path: mongo.conf
      - name: mongodb-data
        persistentVolumeClaim:
          claimName: mongo-nfs
      nodeName: worker-04.k8s.my.lan
