mongo/mongo-exporter-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-exporter
  namespace: db
spec:
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongo-exporter
          image: percona/mongodb_exporter:0.40
          args:
            - --mongodb.uri=mongodb://mongodb.db.svc.cluster.local:27017
            - --collector.profile
            - --compatible-mode
          resources:
            limits:
              memory: "256Mi"
              cpu: "2000m"
          ports:
            - containerPort: 9216
