mongo/mongo-exporter-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-exporter
  namespace: db
  labels:
    app: mongo-exporter
    app.kubernetes.io/name: mongo-exporter
    app.kubernetes.io/instance: mongo-exporter
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: argoCD
spec:
  ports:
    - port: 9216
  selector:
    app: mongo-exporter
