mongo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: db
  labels:
    name: mongodb
spec:
  ports:
    - port: 27017
      protocol: TCP
  selector:
    app: mongodb
